# uht-substrate

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
cli/: README.md  package-lock.json  package.json
cli/src/: client.ts  config.ts  index.ts  output.ts  types.ts
cli/src/commands/: classify.ts  compare.ts  config.ts  entities.ts  facts.ts  impact.ts  info.ts  namespaces.ts  semantic.ts
data/priors/: heuristics.yaml  ontology.yaml  trait_axioms.yaml
scripts/: init_neo4j.py  migrate_facts.py  migrate_namespaces.py
src/uht_substrate/: __init__.py  landing.html  server.py
src/uht_substrate/config/: logging.py  settings.py
src/uht_substrate/graph/: __init__.py  connection.py  queries.py  repository.py  schema.py
src/uht_substrate/priors/: __init__.py  heuristics.py  inference.py  ontology.py  trait_axioms.py
src/uht_substrate/reasoning/: __init__.py  context.py  engine.py  strategies.py  trace.py
src/uht_substrate/tools/: classify.py  context.py  explore.py  reason.py
src/uht_substrate/uht_client/: __init__.py  cache.py  client.py  models.py
